--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://keycloak:8080/realms/spa-booking
+          issuer-uri: http://localhost:18081/realms/spa-booking
 
   cloud:
     gateway:
