--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,13 +14,13 @@ spring:
         - id: user-service
           uri: http://localhost:8082
           predicates:
-            - Path=/me/**
+            - Path=/user/**
 
         # Public read examples (sau này)
         - id: catalog-public
           uri: http://spa-catalog-service:8083
           predicates:
-            - Path=/services/**
+            - Path=/catalog/**
 
 management:
   endpoints:
