--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -1,13 +1,33 @@
+server:
+  port: 8080
+
 spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:18081/realms/spa-booking
+
   cloud:
     gateway:
       routes:
         - id: user-service
-          uri: http://spa-user-service:8082
+          uri: http://localhost:8082
           predicates:
             - Path=/api/v1/user/**
 
-        - id: catalog-service
+        # Public read examples (sau này)
+        - id: catalog-public
           uri: http://spa-catalog-service:8083
           predicates:
             - Path=/api/v1/catalog/**
+
+management:
+  endpoint:
+    health:
+      probes:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health,info
