--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,10 @@ spring:
             - Path=/catalog/**
 
 management:
+  endpoint:
+      health:
+        probes:
+          enabled: true
   endpoints:
     web:
       exposure:
