--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,33 +1,26 @@
 server:
-  port: 8080
+  port: ${SERVER_PORT:8080}
 
 spring:
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://localhost:18081/realms/spa-booking
+  application:
+    name: spa-api-gateway
 
+  # ✅ Base routes: để profile override nếu cần
   cloud:
     gateway:
-      routes:
-        - id: user-service
-          uri: http://localhost:8082
-          predicates:
-            - Path=/user/**
-
-        # Public read examples (sau này)
-        - id: catalog-public
-          uri: http://spa-catalog-service:8083
-          predicates:
-            - Path=/catalog/**
+      default-filters:
+        - PreserveHostHeader
 
 management:
   endpoint:
-      health:
-        probes:
-          enabled: true
+    health:
+      probes:
+        enabled: true
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: health,info,metrics,prometheus
+
+logging:
+  level:
+    org.springframework.security: INFO
